# sprints

./: Makefile  README.md  pyproject.toml
data copy/raw/: raw_data.ipynb
feature_engineering/: feature_engineering.ipynb
inst_414/: Untitled.ipynb
